@@ -8,6 +8,8 @@ Merged from 2.2:
  * Fix commit log replay after out-of-order flush completion (CASSANDRA-9669)
  * Prohibit Reversed Counter type as part of the PK (CASSANDRA-9395)
  * cqlsh: correctly handle non-ascii chars in error messages (CASSANDRA-11626)
+Merged from 2.1:
+ * Set default streaming_socket_timeout_in_ms to 48 hours (CASSANDRA-11826)
 
 3.6
  * Allow server startup if JMX is configured directly (CASSANDRA-11725)
